Creating edit function, WIP

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -14,6 +14,11 @@
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
+      <div class="card-header"></div>  <!--  new div -->
+      <div class="card-body">
+        <h5 class="card-title dark">Edit: <%= longURL %></h5>
+        <p class="card-text">New URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+      </div>
     <div class="card-footer text-muted"></div>
   </div>
   <!-- Bootstrap JS -->
