--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,7 +27,7 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td> 
-              <form method="GET" action="/urls/<%= url %>"><button type="submit" class="btn btn-outline-deep-purple">edit</button></form>  
+              <form method="GET" action="/urls/<%= url %>"><button type="submit" class="btn btn-outline-primary">edit</button></form>  
             </td>            
             <td>
               <form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-outline-danger">delete</button></form>
