--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -21,7 +21,7 @@
           <div>
             <label for="name">New URL:</label>
             <input type="text" name="longURL" value="<%= longURL %>">
-            <input type="submit" value="Submit">
+            <input class="btn btn-primary" type="submit" value="Submit">
           </div>
         </form>
       </div>
