changed nodemon, also made login form in header

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,6 +8,14 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <!-- <a> -->
+          <form method="POST" action="/login">
+          <div>
+            <input type="text" name="username" value="">
+            <input class="btn btn-primary" type="submit" value="Login">
+          </div>
+        </form>
+      <!-- </a> -->
       </div>
     </div>
   </nav>
