--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -12,7 +12,7 @@
 
   <body>
 
-    <header> <%- include('./partials/_header'); -%> </header>
+    <header> <%- include('./partials/_header'); -%> </header> <!--TODO - Add username -->
 
     
 
