--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,15 +8,31 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        <!-- <a> -->
-          <form method="POST" action="/login">
-          <div>
-            <input type="text" name="username" value="">
-            <input class="btn btn-primary" type="submit" value="Login">
+    </div
+
+    <% if(username){ %>     <!--IF LOGGED IN-->
+    <div class="collapse navbar-collapse ml-auto">
+      <ul class="navbar-nav">  
+        <div class="nav-item nav-link">                    <!--Username display-->
+          <input type="submit" value="Logged In As: <%= username %>">
+        </div>
+        <form class="form-inline rounded" method="POST" action="/logout">  <!--Logout form-->
+          <div>  
+            <input class="btn btn-outline-dark" type="submit" value="Logout">
           </div>
         </form>
-      <!-- </a> -->
-      </div>
+      </ul>
     </div>
+        
+    <% } else{ %>           <!--ELSE SHOW LOGIN-->
+    <div class="collapse navbar-collapse ml-auto">
+      <form style="float:right;" class="form-inline rounded ml-auto" method="POST" action="/login">
+        <div class="ml-auto">
+          <input type="text" name="username" placeholder="username" value="">       <!--Login bar-->
+          <input class="btn btn-outline-dark" type="submit" value="Login">
+        </div>
+      </form>
+    </div>
+    <% } %>
   </nav>
 </header>
