--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,12 +8,13 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <a class="nav-item nav-link" href="/register">Register</a>
     </div
 
-    <% if(username){ %>     <!--IF LOGGED IN-->
+    <% if(user){ %>     <!--IF LOGGED IN-->
     <div class="collapse navbar-collapse ml-auto"> 
         <div class="nav-item nav-link ml-auto">
-          <h6>Logged In As: <%= username %></h6>
+          <h6>Logged In As: <%= user.email %></h6>
         </div>
         <form class="form-inline rounded" method="POST" action="/logout">  <!--Logout form-->
           <div>  
@@ -24,12 +25,7 @@
         
     <% } else{ %>           <!--ELSE SHOW LOGIN-->
     <div class="collapse navbar-collapse ml-auto">
-      <form style="float:right;" class="form-inline rounded ml-auto" method="POST" action="/login">
-        <div class="ml-auto">
-          <input type="text" name="username" placeholder="username" value="">       <!--Login bar-->
-          <input class="btn btn-outline-dark" type="submit" value="Login">
-        </div>
-      </form>
+      <a class="nav-item nav-link" href="/login">Login</a>
     </div>
     <% } %>
   </nav>
