--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,12 +19,17 @@
       <form class="form-inline" action="/login" method="POST">
         <div class="form-group mb-2">
           <label for="email">Email address:</label>
+          <br>
           <input class="form-control" type="email" name="email" placeholder="user@example.com" style="width: 300px; margin: 1em">
           <!-- <button type="submit" class="btn btn-primary">Submit</button> -->
         </div>
+      </form>
+      <form class="form-inline" action="/login" method="POST">
         <div class="form-group mb-2">
           <label for="password">Password:</label>
+          <br>
           <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
+          <br>
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
       </form>
