--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -22,10 +22,10 @@
         </tr>
       </thead>
       <tbody>
-        <% for(let url in urls) { %>
+        <% for(let url in links) { %>
           <tr>
             <td><%= url %></td>
-            <td><%= urls[url] %></td>
+            <td><%= links[url] %></td>
             <td> 
               <form method="GET" action="/urls/<%= url %>"><button type="submit" class="btn btn-outline-primary">edit</button></form>  
             </td>            
